[package]
name = "memflow-qemu-procfs"
version = "0.1.5"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "qemu procfs connector for the memflow physical memory introspection framework"
documentation = "https://docs.rs/memflow-qemu-procfs"
readme = "README.md"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow-qemu-procfs"
license-file = "LICENSE"
keywords = [ "memflow", "introspection", "memory" ]
categories = [ "api-bindings", "memory-management", "os" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
#memflow = { git = "https://github.com/memflow/memflow", branch = "next", features = ["plugins"] }
memflow = { path = "../memflow/memflow", features = ["plugins"] }
log = { version = "0.4", default-features = false }
simple_logger = "1.0"
procfs = "0.9"
libc = "0.2"
qapi = { version = "0.7.0", features = ["qmp"], optional = true }
scan_fmt = { version = "0.2", optional = true }

[dev-dependencies]
clap = "2.33"
#memflow-win32 = { git = "https://github.com/memflow/memflow", branch = "next" }
memflow-win32 = { path = "../memflow/memflow-win32" }

[profile.release]
lto = true

[features]
default = ["qmp"]
inventory = []
qmp = ["qapi", "scan_fmt"]

[[example]]
name = "read_phys"
path = "examples/read_phys.rs"

[[example]]
name = "ps_win32"
path = "examples/ps_win32.rs"

[[example]]
name = "ps_inventory"
path = "examples/ps_inventory.rs"
