[package]
name = "memflow-qemu"
version = "0.1.5"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"
description = "qemu connector for the memflow physical memory introspection framework"
documentation = "https://docs.rs/memflow-qemu"
readme = "README.md"
homepage = "https://memflow.github.io"
repository = "https://github.com/memflow/memflow-qemu"
license-file = "LICENSE"
keywords = [ "memflow", "introspection", "memory" ]
categories = [ "api-bindings", "memory-management", "os" ]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
memflow = { git = "https://github.com/memflow/memflow", branch = "next", features = ["plugins"] }
#memflow = { path = "../memflow/memflow", features = ["plugins"] }
memflow-native = { git = "https://github.com/memflow/memflow-native", branch = "main" }
#memflow-native = { path = "../memflow-native" }
log = "^0.4.14"

[target.'cfg(target_os = "linux")'.dependencies]
qapi = { version = "^0.8", features = ["qmp"], optional = true }
scan_fmt = { version = "^0.2.6", optional = true }

[dev-dependencies]
simplelog = "^0.11.1"
memflow-win32 = { git = "https://github.com/memflow/memflow-win32", branch = "main" }
#memflow-win32 = { path = "../memflow/memflow-win32" }

[profile.release]
lto = true

[features]
default = ["qmp"]
qmp = ["qapi", "scan_fmt"]

[[example]]
name = "read_phys"
path = "examples/read_phys.rs"

[[example]]
name = "ps_win32"
path = "examples/ps_win32.rs"

[[example]]
name = "ps_inventory"
path = "examples/ps_inventory.rs"
